--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.3",
+    "@expo/metro-runtime": "^3.1.3",
+    "expo": "^50.0.11",
     "expo-constants": "^15.4.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-dom": "^18.2.0",
+    "react-native": "0.73.4",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-native-web": "^0.19.10",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
